Revision history for {{$dist->name}}

{{$NEXT}}

4.1.6     2015-12-01
        - fix yet another wrong SQL::Abstract usage

4.1.5     2015-11-27
        - re-upload with TAPPER user, same as 4.1.4

4.1.4     2015-11-27
        - RT#93985 - fix wrong SQL::Abstract usage [thanks to Tomohiro Hosaka]

4.1.3     2012-11-26
        - fix tests for changed testplan subcommand

4.1.2     2012-11-22
        - [RFK] 'tapper-testrun newtestplan' is now 'tapper testplan-new'
        - dzil pluginbundle TAPPER

4.1.1     2012-11-19
        - new command: 'tapper init' to initialize a $HOME/.tapper

4.1.0     2012-10-19
        * PostgreSQL support
        - [FIX] slow first() usage
        - rename USER into OWNER

        * Cobbler
        - [FEAT] $cmd-new alias for $cmd-add
        - [FEAT] cobbler CLI commands

        * Towards a single frontend:
        - [FEAT] more subcommands migrated from the soon-to-be-deprecated
          "tapper-testrun" to the new central frontend "testrun" tool

        * Features and Misc
        - [FEAT] queues and host_id for host-list --yaml
        - [FEAT] testplan handling for TaskJuggler
        - [FEAT] renamequeue command
        - [FEAT] testplan-send: allow --file with list of tasknames
        - [FEAT] sanity check for host bind and deny
        - [FEAT] host blacklisting per queue ("denied hosts")
        - [FEAT] show comments only at high verbosity level
        - [FIX] reworked all commands for overall consistency
        - [FIX] Queue command went to Host, deleted Queue module
        - [FIX] notification tests

4.0.1     2012-05-16
        - introduce new App::Rad based primary frontend tool "tapper"
        - [FEAT] Render testplans using Tapper::Reports::DPath::TT
        - [FEAT] new CLI commands for notification commands
        - [FEAT] new CLI commands for handling users
        - [FEAT] new CLI commands for zipfiles
        - [FEAT] new CLI commands for testplans