@@ -4,6 +4,7 @@ use 5.010;
 
 use strict;
 use warnings;
+no warnings "experimental::smartmatch";
 
 use parent 'App::Cmd::Command';
 use Tapper::Model 'model';
